--- a/review/src/main/resources/static/index.html
+++ b/review/src/main/resources/static/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
 </head>
 <body>
 <ul>
-    <li><a href="Join/signUp.html">회원가입</a></li>
+    <li>
+        <a href="Join">회원가입</a>
+        <a href="MainPage">메인페이지</a>
+    </li>
 </ul>
 </body>
 </html>
